# rabbitmq-rs

./: .gitignore  .gitmodules  Cargo.toml  rabbitmqadmin  rpc_server.go
examples/: consumer.rs  pool_publish.rs  publish.rs  rpc_call.rs  rpc_server.rs  tokio_rpc_call.rs
librabbitmq-sys/: Cargo.toml  build.rs  lib.rs  wrapper.h
librabbitmq-sys/bindings/: amqp.rs  mod.rs
src/: channel_pool.rs  config.rs  consumer.rs  error.rs  lib.rs  read_frame.rs  read_message.rs  rpc.rs  rpc_message.rs  util.rs
src/producer/: basic.rs
src/res/: default.toml
src/types/: channel.rs  connection.rs  exchange.rs  mod.rs  props.rs  queue.rs
